artist-page.css
/*** global ***/

@font-face {
  font-family: "Circular";
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot");
  src: url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.eot?#iefix")
      format("embedded-opentype"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.woff")
      format("woff"),
    url("https://www.bu.edu/cdn/fonts/Circular/Circular-Bold.ttf")
      format("truetype");
  font-style: normal;
  font-weight: 700;
}

html {
  height: 100%;
}

/* body {

  z-index: 0;
  background: linear-gradient(
     */
body {
  margin: 0;
  padding: 0;
  font-family: "Circular", sans-serif;
  background-color: #000000;
}

.mainframe {
  max-height: calc(100vh - 90px);
  height: 100%;
  max-width: 100vw;
  width: 100%;
  display: flex;
  flex-direction: row;
}
.main-content {
  max-width: calc(100vw - 232px);
  width: 100%;
  margin-left: 232px;
  padding-left: 1rem;
}

/********************** Sidebar **********************/

aside {
  background-color: #040404;
  color: #b3b3b3;
  max-height: calc(100vh - 90px);
  height: 100%;
  top: 0px;
  max-width: 232px;
  width: 100%;
  position: fixed;
}
.logo {
  width: 8em;
  height: 4.5em;
  display: flex;
  padding-top: 2em;
  margin-left: 2em;
  margin-bottom: 1em;
}
.menu a {
  color: #b3b3b3;
  z-index: 1;
}
.menu a:hover {
  text-decoration: none;
  color: #b3b3b3;
}
ul {
  list-style-type: none;
}
.menu ul li {
  padding-top: 1em;
  font-size: 1em;
}
.menu i {
  padding-right: 20px;
}
.menu h6 {
  padding-left: 35px;
  margin-top: 2em;
  margin-bottom: -0.3em;
}
hr {
  border: 0;
  clear: both;
  display: block;
  width: 96%;
  background-color: #b3b3b3;
  height: 1px;
}
.menu hr {
  width: 80%;
  margin: 0 auto;
  margin-bottom: 5px;
}
.stick-to-bottom {
  position: absolute;
  bottom: 5px;
}
.menu a:hover {
  color: white;
  transition: 0.5s;
}
.menu li:active::after {
  background: #afaeae50;
  color: white !important;
  border-radius: 4px;
  content: "";
  display: block;
  position: absolute;
  margin-top: -30px;
  margin-left: -25px;
  height: 2.5em;
  width: 15vw;
}
.menu li:hover a {
  color: #fff;
}

/* scrollbar */

.playlists {
  position: relative;
  padding-left: 15%;
  font-size: smaller;
  padding-top: 20px;
  overflow-y: auto;
  height: 130px;
}
/* The emerging W3C standard
   that is currently Firefox-only */
* {
  scrollbar-width: auto;
  scrollbar-color: #040404 #b3b3b3;
}

/* Works on Chrome/Edge/Safari */
*::-webkit-scrollbar {
  width: 1em;
}
*::-webkit-scrollbar-track {
  background: #b3b3b3;
}
*::-webkit-scrollbar-thumb {
  background-color: #040404;
  border: 3px solid #b3b3b3;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  .logo {
    width: 5.2em;
    height: 4em;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1em;
    margin-left: 1em;
  }
  .menu ul li {
    padding-top: 0.8em;
    font-size: 0.5em;
    margin-left: -3em;
  }
  .menu h6 {
    padding-left: 15px;
    margin-top: 1em;
    margin-bottom: 0.3em;
    font-size: 0.8em;
  }
  ul a img {
    width: 10px;
    height: 10px;
  }
  .playlists {
    height: 50vh;
    overflow-y: auto;
  }
}
/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  .logo {
    width: 5.2em;
    height: 4em;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1em;
    margin-left: 1em;
  }
  .menu ul li {
    padding-top: 0.8em;
    font-size: 0.5em;
    margin-left: -3em;
  }
  .menu h6 {
    padding-left: 15px;
    margin-top: 1em;
    margin-bottom: 0.3em;
    font-size: 0.8em;
  }
  ul a img {
    width: 20px;
    height: 20px;
  }
  .playlists {
    height: 40vh;
  }
}
/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .logo {
    width: 7.2em;
    height: 4em;
    display: flex;
    padding-top: 0.5;
    margin-bottom: 1em;
    margin-left: 1em;
  }
  .menu ul li {
    padding-top: 0.8em;
    font-size: 0.8em;
    margin-left: -25px;
  }
  .menu h6 {
    padding-left: 15px;
    margin-top: 3em;
    margin-bottom: 0.3em;
    font-size: 0.7em;
  }
  .playlists {
    height: 40vh;
  }
}
/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  .logo {
    width: 8em;
    height: 4.5em;
    display: flex;
    padding-top: 2em;
    margin-bottom: 1em;
    margin-left: 2em;
  }
  .menu ul li {
    padding-top: 1em;
    font-size: 1em;
    margin-left: 0px;
  }
  .menu h6 {
    padding-left: 15px;
    margin-top: 1.3em;
    margin-bottom: 0em;
    font-size: 0.9em;
    margin-left: 25px;
  }
  ul a img {
    width: 20px;
    height: 20px;
  }
  .playlists {
    height: 20vh;
  }
}

/*** artist page ***/
.main-content:before {
  content: " ";
  width: 100vw;
  height: 100vw;
  position: absolute;
  z-index: -1;
  top: 0;
  left: 0;
  background: rgb(0, 0, 0);
  background: linear-gradient(
    0deg,
    rgba(0, 0, 0, 1) 42%,
    rgba(0, 0, 0, 0.2418656938531426) 85%
  );
}

.main-content > img {
  z-index: -99;
  position: absolute;
  width: 100%;
  height: 100%;
  margin: 0;
  top: 0px;
  left: 0px;
  background-repeat: no-repeat;
  object-fit: cover;
  background-attachment: fixed;
}

.jumbotron {
  background-color: transparent;
  align-items: center;
  justify-content: center;
  align-content: center;
}
.nav {
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 1.5em;
  margin-bottom: 1.5em;
  list-style: none;
  justify-content: space-between;
  padding-left: 10em;
  padding-right: 10em;
}

.mainframe h1 {
  color: white;
  font-size: 36px;
  font-weight: 800;
}

.mainframe h6 {
  color: white;
  font-size: 10px;
  font-weight: 600px;
  letter-spacing: 0.1em;
  margin-top: 8px;
}

.artist-pg-play-btn,
.artist-pg-follow-btn {
  min-width: 150px;
  max-width: 350px;
  width: 100%;
  padding: 0.75rem;
  margin: 0.25rem;
  color: white;
  font-weight: 500;
  font-size: 0.8rem;
  letter-spacing: 0.1em;
  border-radius: 2rem;
  text-align: center;
  border: 1px solid white;
  cursor: pointer;
  display: inline-block;

  /* color: white;
  padding: 10px 20px;
  text-align: center;
  justify-content: center;
  text-decoration: none;
  align-content: center;
  border-radius: 16px;
  width: 100px;
  height: 30px;
  font-size: 12px;
  letter-spacing: 0.2em; */

  /* font-weight: 300px; */
}

.artist-pg-play-btn:hover,
.artist-pg-follow-btn:hover {
  background-color: limegreen;
  max-width: 150px;
  width: 100%;
  padding: 0.75rem;
  margin: 0.25rem;
  color: white;
  font-weight: 500;
  font-size: 0.8rem;
  letter-spacing: 0.1em;
  border-radius: 2rem;
  text-align: center;
  border: none;
  cursor: pointer;
  display: inline-block;
  box-shadow: 4px 4px 16px rgba(114, 113, 113, 0.3);
}

.mainframe h6 .nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link {
  background-color: transparent;
  border: 0px;
  font-size: 10px;
  font-weight: 500;
  color: whitesmoke;
  letter-spacing: 0.1em;
  justify-content: space-around;
  margin-bottom: 10px;
}
/* .nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link:hover {
  background-color: transparent;
  border: 0px;
  padding-bottom: 1px;
  border-bottom: 2px solid limegreen;
  font-weight: 500;
  color: whitesmoke; */

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link:after {
  display: block;
  content: "";
  margin-bottom: 10px;
  border-bottom: solid 2px limegreen;
  transform: scaleX(0);
  transition: transform 300ms ease-in-out;
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link:hover:after {
  transform: scaleX(0.5);
}

.nav-tabs .nav-item.show .nav-link,
.nav-tabs .nav-link.active {
  background-color: transparent;
  border: 0px;
  padding-bottom: 1px;
  border-bottom: 3px solid limegreen;
  font-weight: 500;
  color: whitesmoke;
  transition: border-bottom 0.5s ease-in-out;
  -moz-transition: border-bottom 0.5s ease-in-out;
  -webkit-transition: border-bottom 0.5s ease-in-out;
}
.nav-tabs {
  border-bottom: none;
}

.card .spotify-card-icon {
  position: absolute;
  top: 8px;
  left: 8px;
}

.spotify-card-icon {
  color: grey;
  opacity: 0.5;
}

.card:hover .spotify-card-icon {
  color: limegreen;
  opacity: 1;
  z-index: 10001;
}

.trending.card {
  max-width: 150px;
  max-height: 150px;
  border: 0;
  box-shadow: 4px 4px 16px rgba(114, 113, 113, 0.3);
}

.card {
  padding: 0px;
  margin: 0.5rem;
}
.trending.card > div {
  position: absolute;
  display: inline-block;
  color: white;
  text-align: center;
  left: 0;
  right: 0;
  bottom: -2rem;
}
.card > .card-img-top img {
  width: 100%;
  height: 100%;
  background-attachment: fixed;
  object-fit: cover;
}

.overlay-icons {
  display: none;
}

/* .trending.card:hover .overlay-icons {
  display: inline-block;
  position: absolute;
  justify-content: center;
  align-content: center;
  text-align: center;
  font-size: 25px;
  top: 55px;
  right: 50px;
  bottom: 50px;
  left: 50px;
  color: white;
  background-color: rgba(0, 0, 0, 0.5);
  border-radius: 50%;
  border: 2px solid white;
  z-index: 999;
} */

.overlay-icons {
  display: none;
}
.trending.card:hover .overlay-icons {
  display: block;
  justify-content: space-between;
  justify-content: center;
  align-content: center;
  text-align: center;
  position: absolute;
  padding-top: 40%;
  font-size: 25px;
  color: white;
  /* bottom: 0; */
  background: rgba(0, 0, 0, 0.5);
  width: 100%;
  height: 100%;
  transition: 1s ease;
  opacity: 0.9;
  z-index: 10;
}

.fa-play:hover,
.fa-pause:hover,
.fa-play:focus,
.fa-pause:focus {
  color: white;
  transform: scale(1.25);
  transition: 0.25s;
  position: relative;
}
/******************** bottom player ******************/
.player {
  color: #ccc;
  background-color: #282828;
  max-height: 90px;
  height: 100%;
  padding-top: 0.5rem;
  padding-top: 0.5rem;
  bottom: 0px;
}
.player-albumart {
  max-width: 30vw;
  width: 100%;
}
.player-controller {
  max-width: 40vw;
  width: 100%;
}
.player-setting {
  max-width: 30vw;
  width: 100%;
}
.nowplaying-albumart img {
  max-height: 56px;
  max-width: 56px;
  width: 100%;
  height: 100%;
  object-fit: cover;
  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.5);
}
.player-albumart .nowplaying-title {
  font-size: 0.9rem;
  font-weight: bold;
}
.player-albumart .nowplaying-artist {
  font-size: 0.7rem;
  font-weight: bold;
  color: grey;
}
.loved-track {
  position: relative;
}
.player-albumart .fas.fa-heart {
  position: absolute;
  z-index: 1;
  display: inline-block;
  top: 50%;
  left: 50%;
  font-size: 1.1rem;
  transform: translate(-50%, -48%);
}
.player-albumart .fas.fa-heart:hover {
  opacity: 1;
  color: #1db954;
}
.player-albumart .far.fa-heart:hover {
  opacity: 0;
}
.fa-play:hover,
.fa-pause:hover,
.fa-play:focus,
.fa-pause:focus {
  color: white;
  transform: scale(1.25);
  transition: 0.25s;
  position: relative;
}
.player-nowplaying {
  font-size: 0.8rem;
  font-weight: 300;
}
.player-progress {
  width: 100%;
  display: flex;
  align-items: center;
  margin: auto 1rem;
}
#nowplayingProgress {
  width: var(--nowplaying-progress);
  height: 4px;
  background-color: #b3b3b3;
  border-radius: 2px;
}
#nowplayingProgress:hover {
  background-color: #1db954;
}
#nowplayingProgress:hover::after {
  content: " ";
  width: 16px;
  height: 16px;
  border-radius: 50%;
  font-size: 3rem;
  position: absolute;
  color: #b3b3b3;
  background-color: #b3b3b3;
  top: 50%;
  left: 50%;
  transform: translate(-200%, -50%);
  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
  left: var(--nowplaying-progress);
  z-index: 1;
}
.player-volume {
  width: 125px;
  display: flex;
  align-items: center;
  margin-left: 0;
  margin-right: 1rem;
}
#nowplayingVolume {
  width: 100%;
  height: 4px;
  background-color: grey;
  border-radius: 2px;
}

